# android_untrunc

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/untrunc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/src/: AndroidUtils.h  main.cpp
app/src/main/java/com/example/untrunc/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/untrunc/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
